Agregados comentarios explicativos a los códigos de la aplicación
Se han agregado comentarios detallados a lo largo de la aplicación para mejorar la comprensión y facilitar el mantenimiento del código. Los comentarios proporcionan explicaciones claras y concisas sobre la lógica de programación, las funcionalidades clave y cualquier consideración importante. Esto ayudará a los desarrolladores futuros a comprender rápidamente el propósito y el flujo del código, lo que a su vez acelerará el proceso de desarrollo y facilitará la resolución de problemas. Los comentarios están escritos en un estilo claro y consistente, siguiendo las mejores prácticas de documentación y convenciones de nomenclatura. Esta mejora en la legibilidad del código beneficiará a todo el equipo y asegurará un mantenimiento más efectivo y una colaboración más fluida.

--- a/frontend/ChroniclesLogInRegister/login.html
+++ b/frontend/ChroniclesLogInRegister/login.html
@@ -1,3 +1,7 @@
+<!-- 
+    Formulario de acceso
+    En esta pagina se pide el nombre de usuario y la contraseña para poder acceder al sistema.
+ -->
 <!doctype html>
 <html lang="es">    
     <head>        
@@ -11,7 +15,7 @@
         <script type="text/javascript">        
         </script>        
     </head>
-    
+
     <body>
     
         <div id="contenedor">
