--- a/frontend/ChroniclesLogInRegister/register.html
+++ b/frontend/ChroniclesLogInRegister/register.html
@@ -1,3 +1,7 @@
+<!--
+    Formulario de registro
+    En esta pagina se pide el nombre de usuario, el correo electronico y la contraseña para poder registrarse en el sistema.
+  -->
 <!doctype html>
 <html lang="es">    
     <head>        
